syntax = "proto3";
package summa.proto;


// Service
service BeaconApi {
  rpc publish_index (PublishIndexRequest) returns (PublishIndexResponse) {}
}

message AttachIndexRequest {
  string index_config = 1;
  string data_path = 2;
}

message AttachIndexResponse {}

message PublishedFile {
  string name = 1;
  string hash = 2;
  uint64 size = 3;
}

message PublishIndexRequest {
  string index_alias = 1;
}

message PublishIndexResponse {
  repeated PublishedFile published_files = 1;
}
